<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">MoneyCounter</string>
    <string name="menu_settings">Settings</string>
	<string name="Salary_Text">Salary</string>
	<string name="Salary_Amount">18000</string>
	<string name="Count">£0.00</string>
	<string name="Start_Button">Start</string>
	<string name="Stop_Button">Stop</string>
	<color name="Gray">#FF778899</color>
</resources>